src/objects/P7S1_Newsletter__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_Aktiv__c</fullName>
        <description>Zeigt an, ob der Newsletter aktuell verfügbar ist</description>
        <formula>AND (
  OR (
    ISBLANK ( P7S1_Startdatum__c ) , 
    P7S1_Startdatum__c &lt;= TODAY()
  ),
  OR (
    ISBLANK ( P7S1_Enddatum__c ) , 
    P7S1_Enddatum__c &gt;= TODAY()
  )
)</formula>
        <inlineHelpText>Zeigt an, ob der Newsletter aktuell verfügbar ist</inlineHelpText>
        <label>Aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Beschreibung__c</fullName>
        <description>Beschreibung des Newsletters  - erscheint auf der Webseire</description>
        <inlineHelpText>Beschreibung des Newsletters  - erscheint auf der Webseire</inlineHelpText>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bezug zur B2B Aktion</description>
        <inlineHelpText>Bezug zur B2B Aktion</inlineHelpText>
        <label>B2B Aktion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Newsletters</relationshipLabel>
        <relationshipName>Newsletters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Enddatum__c</fullName>
        <description>Ende der Verfügbarkeit dieses Newsletters</description>
        <inlineHelpText>Ende der Verfügbarkeit dieses Newsletters</inlineHelpText>
        <label>Enddatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_Frequenz__c</fullName>
        <description>Frequenz des Versands</description>
        <inlineHelpText>Frequenz des Versands</inlineHelpText>
        <label>Frequenz</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Täglich</fullName>
                </value>
                <value>
                    <fullName>Wöchentlich</fullName>
                </value>
                <value>
                    <fullName>Monatlich</fullName>
                </value>
                <value>
                    <fullName>Unregelmäßig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Kategorie__c</fullName>
        <description>Die Kategorie unter der der Newsletter auf der Webseite angeboten wird</description>
        <inlineHelpText>Die Kategorie unter der der Newsletter auf der Webseite angeboten wird</inlineHelpText>
        <label>Kategorie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Specials</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Sender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Sortierung__c</fullName>
        <description>Nummerische Sortierreihenfolge pro Kategorie</description>
        <inlineHelpText>Nummerische Sortierreihenfolge pro Kategorie</inlineHelpText>
        <label>Sortierung</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_Startdatum__c</fullName>
        <description>Beginn der Verfügbarkeit des Newsletters</description>
        <inlineHelpText>Beginn der Verfügbarkeit des Newsletters</inlineHelpText>
        <label>Startdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_Textfarbe__c</fullName>
        <description>Textfarbe als hex Code für Html Darstellung (Eingabe ohne #). Wenn das Feld leer ist wird der Text in schwarz dargestellt.</description>
        <inlineHelpText>Textfarbe als hex Code für Html Darstellung (Eingabe ohne #). Wenn das Feld leer ist wird der Text in schwarz dargestellt.</inlineHelpText>
        <label>Textfarbe</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Textfett__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Der Titel wird in Fettschrift dargestellt</description>
        <inlineHelpText>Der Titel wird in Fettschrift dargestellt</inlineHelpText>
        <label>Text fett</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Version__c</fullName>
        <description>Art des Versands</description>
        <inlineHelpText>Art des Versands</inlineHelpText>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>E-Print</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Newsletter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Aktiv__c</columns>
        <columns>P7S1_Frequenz__c</columns>
        <columns>P7S1_Kategorie__c</columns>
        <columns>P7S1_Sortierung__c</columns>
        <columns>P7S1_Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Newsletter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Newsletters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>